A/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: pairfy.dev
    nginx.ingress.kubernetes.io/cors-expose-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m

spec:
  rules:
    - host: pairfy.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-home
                port:
                  number: 8000
          - path: /api/seller/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-seller
                port:
                  number: 8000
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-user
                port:
                  number: 8000
          - path: /api/product/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-product
                port:
                  number: 8000
          - path: /api/gate/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-gateway
                port:
                  number: 8000
          - path: /api/media/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-media
                port:
                  number: 8000
          - path: /api/query/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-query
                port:
                  number: 4000
          - path: /socket.io/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-session
                port:
                  number: 3000
          - path: /api/location/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-location
                port:
                  number: 8000
          - path: /api/mediator/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-mediator
                port:
                  number: 8000                  
    - host: dashboard.pairfy.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-seller
                port:
                  number: 8000
